# AgentBuilder_HW_Reflection-Agent-Thumbail-Generator

./: README.md  main.py  pyproject.toml
assets/logos/: README.md
docs/superpowers/plans/: 2026-05-24-thumbnail-creator.md
docs/superpowers/progress/: 2026-05-24-thumbnail-creator-progress.md
docs/superpowers/specs/: 2026-05-24-thumbnail-creator-design.md
outputs/20260524_101532_why_python_is_the_best_language_for_ai/: report.md
outputs/20260524_110024_anthropic_secretly_won_the_ai_coding_rac/: report.md
outputs/20260524_111701_claude_code_replaced_my_engineering_team/: report.md
outputs/20260524_113036_claude_code_replaced_my_engineering_team/: report.md
outputs/20260524_114134_claude_code_replaced_my_engineering_team/: report.md
outputs/20260524_114411_the_one_person_billion_dollar_company_is/: report.md
outputs/20260524_114513_solo_founders_with_ai_are_unstoppable_no/: report.md
outputs/20260524_114834_this_ai_agent_made_money_while_i_slept/: report.md
tests/: test_compositor.py  test_graph.py  test_nodes.py  test_prompts.py  test_should_continue.py  test_state.py  test_tools.py
thumbnail_agent/: compositor.py  graph.mmd  graph.py  main.py  make_diagram.py  nodes.py  prompts.py  state.py  tools.py
