[project]
name = "thumbnail-creator"
version = "0.1.0"
description = "Reflexion Agent YouTube Thumbnail Designer — (LangGraph assignment1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "openai>=1.30.0",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]
